# distronomicon

./: .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  audit-output.txt  dist-workspace.toml  update-output.txt  update-summary.md
.github/workflows/: ci.yml  update-dependencies.yml
docs/: spec.md
src/: cli.rs  download.rs  extract.rs  fsops.rs  github.rs  lib.rs  lock.rs  main.rs  restart.rs  state.rs  verify.rs  version.rs
systemd/: distronomicon@.service  distronomicon@.timer  example.conf
tests/: cli_check.rs  cli_help.rs  cli_test.rs  cli_update.rs  cli_version.rs  smoke.rs
tests/snapshots/: cli_check__check_first_run_no_state.snap  cli_check__check_with_update_available.snap  cli_check__state_validators_updated_on_304.snap  cli_help__check_subcommand_help.snap  cli_help__help_output.snap  cli_help__update_subcommand_help.snap  cli_help__version_subcommand_help.snap  cli_test__help_shows_subcommands.snap  cli_version__version_verbose_shows_diagnostics.snap  smoke__unlock_succeeds_when_no_lock_exists.snap  smoke__update_then_version_then_noop_update-2.snap  smoke__update_then_version_then_noop_update.snap
