[package]
name = "distronomicon"
description = "GitHub release updater for Linux binaries"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1"
camino = "1"
camino-tempfile = "1"
clap = { version = "4", features = ["derive", "env"] }
flate2 = "1"
jiff = { version = "0.2", features = ["serde"] }
regex = "1"
reqwest = { version = "0.12", features = ["rustls-tls", "json", "stream"] }
reqwest-retry = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
zip = { version = "6", features = ["deflate"] }

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
camino-tempfile-ext = "0.3"
insta = "1"
wiremock = "0.6"
