[package]
name = "distronomicon"
description = "GitHub release updater for Linux binaries"
repository = "https://github.com/jtdowney/distronomicon"
version = "0.1.1"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1"
bon = "3"
camino = "1"
camino-tempfile = "1"
clap = { version = "4", features = ["derive", "env"] }
flate2 = "1"
futures-util = "0.3"
jiff = { version = "0.2", features = ["serde"] }
niffler = "3"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
reqwest-middleware = "0.4"
reqwest-retry = "0.7"
rustix = { version = "1", features = ["fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
zip = { version = "6", features = ["deflate"] }

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
assert_matches = "1"
bzip2 = "0.6"
camino-tempfile-ext = "0.3"
insta = "1"
wiremock = "0.6"
zstd = "0.13"

[profile.release]
opt-level = 3
debug = "line-tables-only"
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.dist]
inherits = "release"
